--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/react": "^15.0.7",
     "@testing-library/user-event": "^14.5.2",
     "axios": "^1.6.8",
+    "nodemon": "^3.1.0",
     "react": "^18.3.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.1",
@@ -21,7 +22,7 @@
     "web-vitals": "^4.0.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "PORT=3006 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
